@@ -5,7 +5,7 @@ use 5.010;
 
 no if $] >= 5.018, warnings => 'experimental::smartmatch';
 
-our $VERSION = '0.05';
+our $VERSION = '1.00';
 
 binmode( STDOUT, ':encoding(utf-8)' );
 
@@ -182,7 +182,7 @@ sub show_results {
 			@route = (
 				show_route( $dt_now, $dt_format, $d->route_pre ),
 				[ ' - - - -', q{}, q{}, q{} ],
-				show_route( $dt_now, $dt_format, $d->route_post )
+				show_route( $dt_now, $dt_format, $d->route_post ),
 			);
 		}
 		elsif ( $edata{route_after} ) {
@@ -247,7 +247,7 @@ B<aseag-m> [B<-pV>] [B<-l> I<lines>] [B<-o> I<outputtypes>]
 
 =head1 VERSION
 
-version 0.05
+version 1.00
 
 =head1 DESCRIPTION
 
